// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render correctly opened 1`] = `
<div
  class="modal-dialog"
  data-testid="modal-test"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-body"
    />
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-primary"
        data-testid="modal-confirm-button"
        type="button"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal should render correctly when isLoading 1`] = `
<div
  class="modal-dialog"
  data-testid="modal-test"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-body"
    />
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-primary"
        data-testid="modal-confirm-button"
        disabled=""
        type="button"
      >
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-spinner fa-spin fa-sm  css-1vbona3"
            data-icon="spinner"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal should render correctly with props and children 1`] = `
<div
  class="modal-dialog"
  data-testid="modal-test"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <div
        class="modal-title h4"
      >
        Test
      </div>
      <button
        aria-label="Close"
        class="btn-close"
        type="button"
      />
    </div>
    <div
      class="modal-body"
    >
      <div>
        Test
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-primary"
        data-testid="modal-confirm-button"
        type="button"
      >
        Test Confirm
      </button>
    </div>
  </div>
</div>
`;
